@@ -12,7 +12,6 @@ symbian:NOUSEWEBKIT=1
 symbian:MOBILE=1
 # MOBILE=1    	      - enable MOBILE
 # GEOIMAGE=1          - enable geotagged images (requires exiv2)
-# GPSD=1              - use gpsd as location provider
 # NVIDIA_HACK=1       - used to solve nvidia specific slowdown
 # GDAL=1    	      - enable GDAL (for, e.g., shapefile import; requires libgdal)
 # FORCE_CUSTOM_STYLE=1 - force custom style (recommended on Linux until the "expanding dock" is solved upstream)
